---
title: MaW Media Schema ERD
---
erDiagram
    %% external_id = nameidentifier
    external_identity {
        TEXT external_id PK
        UUID user_id FK
        TIMESTAMPTZ created
        TIMESTAMPTZ modified
        TEXT name
        TEXT email
        BOOLEAN email_verified
        TEXT given_name
        TEXT surname
        TEXT picture
    }

    user {
        UUID id PK
        TIMESTAMPTZ created
        TIMESTAMPTZ modified
        TEXT name
        TEXT email
        BOOLEAN email_verified
        TEXT given_name
        TEXT surname
        TEXT picture_url
    }

    role {
        UUID id PK
        TEXT name UK
    }

    user_role {
        UUID user_id PK, FK
        UUID role_id PK, FK
        TIMESTAMPTZ created
        UUID created_by FK
    }

    category {
        UUID id PK
        TEXT name
        DATE effective_date
        TIMESTAMPTZ created
        UUID created_by FK
        TIMESTAMPTZ modified
        UUID modified_by FK
    }

    category_role {
        UUID category_id PK, FK
        UUID role_id PK, FK
        TIMESTAMPTZ created
        UUID created_by FK
    }

    category_favorite {
        UUID created_by PK, FK
        UUID category_id PK, FK
        TIMESTAMPTZ created
    }

    type {
        UUID id PK
        TEXT name UK
    }

    %% qqvg    ( 160 x  120)
    %% qvg     ( 320 x  240)
    %% nhd     ( 640 x  360)
    %% hd      (1280 x  720)
    %% full_hd (1920 x 1080)
    %% qhd     (2560 x 1440)
    %% 4k      (3840 x 2160)
    %% 5k      (5120 x 2880)  - skip for now
    %% 8k      (7680 × 4320)  - skip for now
    %% src     ?
    scale {
        UUID id PK
        TEXT code UK
        INTEGER width
        INTEGER height
        BOOLEAN fills_dimensions
    }

    location {
        UUID id PK
        NUMERIC(8_6) latitude
        NUMERIC(9_6) longitude
        TIMESTAMPTZ lookup_date
        TEXT formatted_address
        TEXT administrative_area_level_1
        TEXT administrative_area_level_2
        TEXT administrative_area_level_3
        TEXT country
        TEXT locality
        TEXT neighborhood
        TEXT sub_locality_level_1
        TEXT sub_locality_level_2
        TEXT postal_code
        TEXT postal_code_suffix
        TEXT premise
        TEXT route
        TEXT street_number
        TEXT sub_premise
    }

    point_of_interest {
        UUID location_id PK, FK
        TEXT type PK
        TEXT name
    }

    media {
        UUID id PK
        UUID type_id FK
        UUID location_id FK
        UUID location_override_id FK
        TIMESTAMPTZ created
        UUID created_by FK
        TIMESTAMPTZ modified
        UUID modified_by FK
        JSONB metadata
    }

    file {
        UUID media_id PK, FK
        UUID type_id PK, FK
        UUID scale_id PK, FK
        INTEGER width
        INTEGER height
        BIGINT bytes
        TEXT path
    }

    category_media {
        UUID category_id PK, FK
        UUID media_id PK, FK
        BOOLEAN is_teaser
        TIMESTAMPTZ created
        UUID created_by FK
        TIMESTAMPTZ modified
        UUID modified_by FK
    }

    comment {
        UUID id PK
        UUID media_id FK
        TIMESTAMPTZ created
        UUID created_by FK
        TIMESTAMPTZ modified
        TEXT body
    }

    favorite {
        UUID media_id PK, FK
        UUID created_by PK, FK
        TIMESTAMPTZ created
    }

    %% Relationships
    user ||--o{ user_role : ""
    role ||--o{ user_role : ""
    user ||--o{ category : "created_by"
    user ||--o{ category : "modified_by"
    category ||--o{ category_role : ""
    role ||--o{ category_role : ""
    user ||--o{ category_role : "created_by"
    user ||--o{ category_favorite : ""
    category ||--o{ category_favorite : ""
    category ||--o{ category_media : ""
    media ||--o{ category_media : ""
    user ||--o{ category_media : "created_by"
    user ||--o{ category_media : "modified_by"
    type ||--o{ media : ""
    location ||--o{ media : "location_id"
    location ||--o{ media : "location_override_id"
    user ||--o{ media : "created_by"
    user ||--o{ media : "modified_by"
    media ||--o{ file : ""
    type ||--o{ file : ""
    scale ||--o{ file : ""
    user ||--o{ external_identity : ""
    media ||--o{ comment : ""
    user ||--o{ comment : "created_by"
    media ||--o{ favorite : ""
    user ||--o{ favorite : "created_by"
    location ||--o{ point_of_interest : ""
